完善完成搜索视频布局(100%)

--- a/module_eye_discover/src/main/res/layouts/adapters/layout/eye_discover_search_result_topic_item.xml
+++ b/module_eye_discover/src/main/res/layouts/adapters/layout/eye_discover_search_result_topic_item.xml
@@ -58,7 +58,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/cover"
             app:layout_constraintTop_toBottomOf="@id/title"
-            tools:text="#广告hhhhdhdhdhdhdhdhdhdhdhdhdhdhdhdhdhdhdhhdhd" />
+            tools:text="#广告" />
 
         <LinearLayout
             android:id="@+id/tags"
