--- a/module_eye_discover/src/main/res/layouts/adapters/layout/eye_discover_search_result_graphic_item.xml
+++ b/module_eye_discover/src/main/res/layouts/adapters/layout/eye_discover_search_result_graphic_item.xml
@@ -27,7 +27,7 @@
             imageUrl="@{viewModel.cover.url}"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             android:adjustViewBounds="true"
 
             app:layout_constraintStart_toStartOf="parent"
@@ -64,21 +64,45 @@
                 tools:text="这不是你想的那种羞羞的广告 [ 真的] !" />
 
 
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
+<!--            <TextView-->
+<!--                android:id="@+id/textView"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="10dp"-->
+<!--                android:layout_marginTop="10dp"-->
+<!--                android:ellipsize="end"-->
+<!--                android:maxLines="1"-->
+<!--                android:textColor="@color/eye_discover_video_card_tv_desc_text_color"-->
+<!--                android:textSize="12sp"-->
+<!--                android:textStyle="bold"-->
+<!--                android:text="@{viewModel.topics !=null && viewModel.topics.size() > 0 ? viewModel.topics.get(0).title : @string/sd}"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/tv_search_result_topic_title"-->
+<!--                app:layout_constraintLeft_toLeftOf="parent"-->
+<!--                tools:text="# 广告 / 开眼精选" />-->
+
+
+            <LinearLayout
+                android:id="@+id/ll_graphic_tags"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:textColor="@color/eye_discover_video_card_tv_desc_text_color"
-                android:textSize="12sp"
-                android:textStyle="bold"
-                android:text="@{viewModel.topics.get(0).title}"
+                android:layout_marginHorizontal="8dp"
+                android:layout_marginBottom="4dp"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_search_result_topic_title"
-                app:layout_constraintLeft_toLeftOf="parent"
-                tools:text="# 广告 / 开眼精选" />
+                app:layout_constraintLeft_toLeftOf="parent"/>
+
+
+
+
+
+
+
+
+
 
             <TextView
                 android:layout_width="wrap_content"
@@ -93,7 +117,7 @@
                 android:text="@{viewModel.consumption.like_count+`人点赞` + viewModel.consumption.collection_count + `人收藏`}"
                 app:layout_constraintTop_toBottomOf="@id/tv_search_result_topic_title"
                 app:layout_constraintRight_toRightOf="parent"
-                tools:text="# 广告 / 开眼精选" />
+                />
 
 
 
