--- a/module_eye_square/src/main/res/layouts/activitys/layout/eye_square_activity.xml
+++ b/module_eye_square/src/main/res/layouts/activitys/layout/eye_square_activity.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -10,14 +9,12 @@
             type="java.lang.String" />
     </data>
 
-
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <include
-            android:id="@+id/include_eye_daily_toolbar"
+            android:id="@+id/include_eye_square_toolbar"
             layout="@layout/base_include_toolbar"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -26,10 +23,10 @@
 
 
         <com.scwang.smart.refresh.layout.SmartRefreshLayout
-            android:id="@+id/daily_list_refreshLayout"
+            android:id="@+id/eye_square_list_refreshLayout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/include_eye_daily_toolbar"
+            app:layout_constraintTop_toBottomOf="@id/include_eye_square_toolbar"
             app:layout_constraintBottom_toBottomOf="parent"
             >
 
@@ -39,7 +36,7 @@
                 />
 
             <com.yanzhenjie.recyclerview.SwipeRecyclerView
-                android:id="@+id/rv_daily_list"
+                android:id="@+id/rv_eye_square_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
@@ -49,6 +46,5 @@
 
         </com.scwang.smart.refresh.layout.SmartRefreshLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
-
-
