完善完成广场界面(30%)

--- a/module_eye_square/src/main/res/layouts/adapters/layout/eye_square_banner_item.xml
+++ b/module_eye_square/src/main/res/layouts/adapters/layout/eye_square_banner_item.xml
@@ -20,7 +20,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:bannerImageUrl="@{viewModel.itemlist}"/>
+            app:bannerUrl="@{viewModel.itemlist}"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
