--- a/module_eye_square/src/main/res/layouts/adapters/layout/eye_square_waterfall_cover_small.xml
+++ b/module_eye_square/src/main/res/layouts/adapters/layout/eye_square_waterfall_cover_small.xml
@@ -16,8 +16,8 @@
         android:layout_marginVertical="8dp"
         android:clickable="true"
         android:focusable="true"
-        app:strokeColor="?attr/colorSurfaceVariant">
-
+       >
+<!--        app:strokeColor="?attr/colorSurfaceVariant"-->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
