1.接入ShareSdk分享平台

--- a/library_share/src/main/res/layout/share_dialog.xml
+++ b/library_share/src/main/res/layout/share_dialog.xml
@@ -114,6 +114,7 @@
 
 
            <TextView
+               android:id="@+id/tv_wechat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
