1.接入侧滑效果

--- a/library_widget/src/main/res/values/attrs.xml
+++ b/library_widget/src/main/res/values/attrs.xml
@@ -1159,4 +1159,9 @@
         <attr name="shape_lineGravity" />
     </declare-styleable>
 
+
+    <declare-styleable name="SlidingLayout">
+        <attr name="menuRightMargin" format="dimension"/>
+    </declare-styleable>
+
 </resources>
