--- a/module_home/src/main/res/layouts/items/layout/home_include_toolbar.xml
+++ b/module_home/src/main/res/layouts/items/layout/home_include_toolbar.xml
@@ -13,23 +13,33 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+<!--        每日箴言-->
+<!--        https://apis.juhe.cn/fapig/soup/query?key=35a99dbd7e83a0c58aab5a4329ba52fb -->
+<!--        <com.knight.kotlin.library_widget.MarqueeTextView-->
+<!--            android:id="@+id/home_tv_loginname"-->
+<!--            android:layout_width="40dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_centerVertical="true"-->
+<!--            android:layout_marginLeft="@dimen/base_dimen_6"-->
+<!--            android:ellipsize="marquee"-->
+<!--            android:focusable="true"-->
+<!--            android:focusableInTouchMode="true"-->
+<!--            android:gravity="center"-->
+<!--            android:marqueeRepeatLimit="marquee_forever"-->
+<!--            android:scrollHorizontally="true"-->
+<!--            android:singleLine="true"-->
+<!--            android:text="@string/home_tv_login"-->
+<!--            android:textColor="@color/home_login_tv_color"-->
+<!--            tools:ignore="SpUsage" />-->
 
-        <com.knight.kotlin.library_widget.MarqueeTextView
-            android:id="@+id/home_tv_loginname"
-            android:layout_width="40dp"
+        <ImageView
+            android:id="@+id/home_iv_loginname"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/home_icon_menu"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/base_dimen_6"
-            android:ellipsize="marquee"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:gravity="center"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:scrollHorizontally="true"
-            android:singleLine="true"
-            android:text="@string/home_tv_login"
-            android:textColor="@color/home_login_tv_color"
-            tools:ignore="SpUsage" />
+            android:layout_marginLeft="@dimen/base_dimen_10"/>
+
 
         <RelativeLayout
             android:id="@+id/home_rl_search"
@@ -38,7 +48,7 @@
             android:layout_marginLeft="@dimen/base_dimen_10"
             android:layout_marginRight="@dimen/base_dimen_6"
             android:layout_toLeftOf="@+id/home_iv_everyday"
-            android:layout_toRightOf="@id/home_tv_loginname"
+            android:layout_toRightOf="@id/home_iv_loginname"
             android:background="@drawable/base_bg_filtrate_shape">
 
 
