--- a/module_home/src/main/res/values/dimens.xml
+++ b/module_home/src/main/res/values/dimens.xml
@@ -229,5 +229,7 @@
      <dimen name="home_ll_eyepetizer_category_margin_left">20dp</dimen>
      <dimen name="home_iv_eyepetizer_category_height">40dp</dimen>
      <dimen name="home_iv_eyepetizer_category_width">40dp</dimen>
-
+     <dimen name="home_tv_user_name_text_size">18sp</dimen>
+     <dimen name="home_tv_user_name_margin_top">25dp</dimen>
+     <dimen name="home_tv_user_name_margin_left">10dp</dimen>
 </resources>
