优化完善侧滑接入每日一言API

--- a/module_home/src/main/res/layouts/fragments/layout/home_recommend_fragment.xml
+++ b/module_home/src/main/res/layouts/fragments/layout/home_recommend_fragment.xml
@@ -1,25 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.knight.kotlin.library_widget.slidinglayout.SlidingLayout
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/home_sliding_menu"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    app:menuRightMargin="62dp"
-    >
-<!--    android:background="@drawable/home_menu_bg"-->
-    <LinearLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.knight.kotlin.module_home.entity.ZaoBaoBean" />
+
+    </data>
+
+    <com.knight.kotlin.library_widget.slidinglayout.SlidingLayout
+        android:id="@+id/home_sliding_menu"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
-        <include
-            android:id="@+id/home_recomment_menu"
-            layout="@layout/home_layout_recommend_menu"/>
-        <include
-            android:id="@+id/home_recomment_conent"
-            layout="@layout/home_layout_recommend_content"/>
+        android:orientation="vertical"
+        app:menuRightMargin="62dp"
+        >
+        <!--    android:background="@drawable/home_menu_bg"-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <include
+                android:id="@+id/home_recomment_menu"
+                layout="@layout/home_layout_recommend_menu"
+                app:viewModel="@{viewModel}"
+                />
+            <include
+                android:id="@+id/home_recomment_conent"
+                layout="@layout/home_layout_recommend_content"/>
 
 
-    </LinearLayout>
-</com.knight.kotlin.library_widget.slidinglayout.SlidingLayout>
+        </LinearLayout>
+    </com.knight.kotlin.library_widget.slidinglayout.SlidingLayout>
+
+
+</layout>
+
+
