--- a/module_home/src/main/res/layouts/fragments/layout/home_recommend_fragment.xml
+++ b/module_home/src/main/res/layouts/fragments/layout/home_recommend_fragment.xml
@@ -7,7 +7,9 @@
         <variable
             name="viewModel"
             type="com.knight.kotlin.module_home.entity.ZaoBaoBean" />
-
+        <variable
+            name="todayWeather"
+            type="com.knight.kotlin.module_home.entity.TodayWeatherDataBean" />
     </data>
 
     <com.knight.kotlin.library_widget.slidinglayout.SlidingLayout
@@ -26,6 +28,7 @@
                 android:id="@+id/home_recomment_menu"
                 layout="@layout/home_layout_recommend_menu"
                 app:viewModel="@{viewModel}"
+                app:todayWeather="@{todayWeather}"
                 />
             <include
                 android:id="@+id/home_recomment_conent"
