--- a/module_home/src/main/res/values/dimens.xml
+++ b/module_home/src/main/res/values/dimens.xml
@@ -235,4 +235,7 @@
      <dimen name="home_tv_degree_text_size">80sp</dimen>
      <dimen name="home_tv_degree_margin_top">20dp</dimen>
      <dimen name="home_tv_degree_margin_left">10dp</dimen>
+     <dimen name="home_tv_wind_direction_text_size">16sp</dimen>
+     <dimen name="home_tv_wind_direction_margin_bottom">15dp</dimen>
+     <dimen name="home_tv_zaobao_title_tip_text_size">14sp</dimen>
 </resources>
