优化天气折线图(90%)

--- a/module_home/src/main/res/layouts/fragments/layout/home_recommend_fragment.xml
+++ b/module_home/src/main/res/layouts/fragments/layout/home_recommend_fragment.xml
@@ -18,6 +18,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         app:menuRightMargin="62dp"
+        android:scrollbars="none"
         >
         <!--    android:background="@drawable/home_menu_bg"-->
         <LinearLayout
