--- a/library_widget/src/main/res/layout/weather_item.xml
+++ b/library_widget/src/main/res/layout/weather_item.xml
@@ -29,8 +29,8 @@
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:text="昨天"
-            android:textColor="#fff"
-            android:textSize="16dp" />
+            android:textColor="#8D8D8E"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/tv_date"
@@ -40,8 +40,8 @@
             android:paddingBottom="4dp"
             android:gravity="center"
             android:text="12/07"
-            android:textColor="#fff"
-            android:textSize="14dp" />
+            android:textColor="#8D8D8E"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tv_day_weather"
@@ -51,8 +51,8 @@
             android:paddingBottom="4dp"
             android:gravity="center"
             android:text="晴"
-            android:textColor="#fff"
-            android:textSize="16dp" />
+            android:textColor="#333333"
+            android:textSize="16sp" />
 
         <ImageView
             android:id="@+id/iv_day_weather"
@@ -82,8 +82,8 @@
             android:paddingBottom="4dp"
             android:gravity="center"
             android:text="晴"
-            android:textColor="#fff"
-            android:textSize="16dp" />
+            android:textColor="#333333"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tv_wind_ori"
@@ -93,8 +93,8 @@
             android:paddingBottom="4dp"
             android:gravity="center"
             android:text="西南风"
-            android:textColor="#fff"
-            android:textSize="12dp" />
+            android:textColor="#8D8D8E"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/tv_wind_level"
@@ -104,8 +104,8 @@
             android:paddingBottom="4dp"
             android:gravity="center"
             android:text="3级"
-            android:textColor="#fff"
-            android:textSize="16dp" />
+            android:textColor="#8D8D8E"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/tv_air_level"
