--- a/module_home/src/main/res/layouts/activitys/layout/home_layout_recommend_menu.xml
+++ b/module_home/src/main/res/layouts/activitys/layout/home_layout_recommend_menu.xml
@@ -100,16 +100,19 @@
                     android:id="@+id/weather_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="#333"
+                    android:background="@drawable/home_weather_corners_bg"
                     app:layout_constraintTop_toBottomOf="@id/tv_zaobao_day_tip"
                     android:layout_marginTop="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    android:scrollbarSize="4dp"
-                    android:scrollbarThumbHorizontal="@drawable/widget_scroll_bar_thumb"
-                    android:scrollbarTrackHorizontal="@drawable/widget_scroll_bar_thumb" />
+                    android:scrollbars="none"
+                  />
 
-
+<!--                android:scrollbarSize="4dp"-->
+<!--                android:scrollbarThumbHorizontal="@drawable/widget_scroll_bar_thumb"-->
+<!--                android:scrollbarTrackHorizontal="@drawable/widget_scroll_bar_thumb"-->
 
 
 
