--- a/library_widget/src/main/res/layout/weather_item.xml
+++ b/library_widget/src/main/res/layout/weather_item.xml
@@ -7,11 +7,11 @@
     android:orientation="horizontal"
     tools:background="#000">
 
-    <View
-        android:id="@+id/line_one"
-        android:layout_width="1px"
-        android:layout_height="match_parent"
-        android:background="#eee" />
+<!--    <View-->
+<!--        android:id="@+id/line_one"-->
+<!--        android:layout_width="1px"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:background="#eee" />-->
 
     <LinearLayout
         android:layout_width="0dp"
@@ -124,11 +124,11 @@
             android:textSize="11dp" />
     </LinearLayout>
 
-    <View
-        android:id="@+id/line_two"
-        android:layout_width="1px"
-        android:layout_height="match_parent"
-        android:background="#eee" />
+<!--    <View-->
+<!--        android:id="@+id/line_two"-->
+<!--        android:layout_width="1px"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:background="#eee" />-->
 
 
 </LinearLayout>
