--- a/module_home/src/main/res/layouts/activitys/layout/home_layout_recommend_menu.xml
+++ b/module_home/src/main/res/layouts/activitys/layout/home_layout_recommend_menu.xml
@@ -12,6 +12,10 @@
         <variable
             name="todayWeather"
             type="com.knight.kotlin.library_base.entity.TodayWeatherDataBean" />
+
+       <variable
+           name="airWeather"
+           type="com.knight.kotlin.library_base.entity.WeatherAir" />
     </data>
 
 
@@ -69,11 +73,59 @@
                      android:textSize="@dimen/home_tv_degree_text_size"
                      android:text="@{todayWeather.degree + '°'}"
                      android:textStyle="bold"
+                     android:includeFontPadding="false"
                      app:layout_constraintTop_toBottomOf="@id/home_btn_login_name"
                      android:layout_marginLeft="@dimen/home_tv_degree_margin_left"
                      android:layout_marginTop="@dimen/home_tv_degree_margin_top"
                      app:layout_constraintLeft_toLeftOf="parent"/>
+
+
+                <RelativeLayout
+                    android:id="@+id/rl_air_quality"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/home_weather_air_quality_shape"
+                    app:layout_constraintLeft_toRightOf="@id/tv_weather_degree"
+                    app:layout_constraintTop_toTopOf="@id/tv_weather_degree"
+                    android:layout_marginTop="@dimen/home_rl_air_quality_margin_top"
+                    android:layout_marginLeft="@dimen/home_rl_air_quality_margin_left">
+
+
+                    <ImageView
+                        android:id="@+id/iv_air_quality"
+                        android:layout_width="wrap_content"
+                        android:layout_height="24dp"
+                        app:imageUrl="@{airWeather.aqi_url}"
+                        android:layout_centerVertical="true"
+                        android:scaleType="fitCenter"/>
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toRightOf="@id/iv_air_quality"
+                        android:layout_centerVertical="true"
+                        android:text="@{airWeather.aqi_name + ' ' + airWeather.aqi}"
+                        />
+
+
+
+                </RelativeLayout>
+
+
                 <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/white"
+                    app:layout_constraintLeft_toRightOf="@id/tv_weather_degree"
+                    app:layout_constraintBottom_toTopOf="@id/tv_weather_wind"
+                    android:textSize="@dimen/home_tv_wind_direction_text_size"
+                    android:text="@{todayWeather.weather}"
+                    />
+
+
+                <TextView
+                    android:id="@+id/tv_weather_wind"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@android:color/white"
@@ -97,7 +149,130 @@
                     android:drawableRight="@drawable/home_icon_zaobao_tip"
                     android:drawablePadding="@dimen/base_dimen_4"
                     android:textSize="@dimen/home_tv_zaobao_title_tip_text_size"
-                    android:gravity="center" />
+                    android:gravity="center"
+                    android:layout_marginTop="@dimen/home_tv_zaobao_day_tip_margin_top"/>
+
+
+                <LinearLayout
+                    android:id="@+id/ll_today_tomorrow_weather"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintTop_toBottomOf="@id/tv_zaobao_day_tip">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="5dp"
+                        android:background="@drawable/home_day_weather_shape">
+
+                        <TextView
+                            android:id="@+id/tv_weather_today_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            android:text="今天"/>
+
+
+                        <TextView
+                            android:id="@+id/tv_weather_today_value"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintRight_toRightOf="parent"
+                            android:text="多云"/>
+
+
+                        <TextView
+                            android:id="@+id/tv_weather_today_minmax_degree"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            android:textSize="16sp"
+                            android:textStyle="bold"
+                            android:textColor="@android:color/black"/>
+
+
+                        <TextView
+                            android:id="@+id/tv_today_air_level"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintRight_toRightOf="parent"
+                            android:gravity="center"
+                            android:paddingLeft="6dp"
+                            android:paddingTop="2dp"
+                            android:paddingRight="6dp"
+                            android:paddingBottom="2dp"
+                            android:text="良"
+
+                            android:textColor="#fff"
+                            android:textSize="11dp" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="10dp"
+                        android:background="@drawable/home_day_weather_shape">
+
+                        <TextView
+                            android:id="@+id/tv_weather_tomorrow_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            android:text="明天"/>
+
+
+                        <TextView
+                            android:id="@+id/tv_weather_tomorrow_value"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintRight_toRightOf="parent"
+                            android:text="雾"/>
+
+                        <TextView
+                            android:id="@+id/tv_weather_tomorrow_minmax_degree"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            android:textSize="16sp"
+                            android:textStyle="bold"
+                            android:textColor="@android:color/black"/>
+
+
+                        <TextView
+                            android:id="@+id/tv_tomorrow_air_level"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintRight_toRightOf="parent"
+                            android:gravity="center"
+                            android:paddingLeft="6dp"
+                            android:paddingTop="2dp"
+                            android:paddingRight="6dp"
+                            android:paddingBottom="2dp"
+                            android:text="良"
+                            android:textColor="#fff"
+                            android:textSize="11dp" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                </LinearLayout>
+
+
 
 
                 <com.yanzhenjie.recyclerview.SwipeRecyclerView
@@ -107,7 +282,7 @@
                     android:background="@drawable/home_weather_corners_bg"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_zaobao_day_tip"
+                    app:layout_constraintTop_toBottomOf="@id/ll_today_tomorrow_weather"
                     android:layout_marginTop="10dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
@@ -133,13 +308,6 @@
 <!--                android:scrollbarSize="4dp"-->
 <!--                android:scrollbarThumbHorizontal="@drawable/widget_scroll_bar_thumb"-->
 <!--                android:scrollbarTrackHorizontal="@drawable/widget_scroll_bar_thumb"-->
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="600dp"
-
-                    android:layout_below="@id/cl_slidmenu"
-                    app:layout_constraintTop_toBottomOf="@id/weather_view"/>
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
