--- a/module_home/src/main/res/layouts/activitys/layout/home_layout_recommend_menu.xml
+++ b/module_home/src/main/res/layouts/activitys/layout/home_layout_recommend_menu.xml
@@ -305,23 +305,14 @@
                     android:scrollbars="none"
                   />
 
-               <com.knight.kotlin.library_widget.weatherview.BarChartView
-                   android:layout_centerInParent="true"
-                   app:layout_constraintLeft_toLeftOf="parent"
-                   app:layout_constraintRight_toRightOf="parent"
-                   app:layout_constraintTop_toBottomOf="@id/weather_view"
-                   app:gradientStartColor="#ffa666"
-                   app:gradientEndColor="#e57a2e"
-                   app:barlineColor="#333333"
-                   app:chartColor="#666666"
-                   app:bartextColor="#333333"
-                   app:maxValue="2500"
-                   app:unit="单位"
-                   app:horizentalLineNum="2"
-                   app:barWidth="32"
-                   android:id="@+id/bar_chart"
-                   android:layout_width="0dp"
-                   android:layout_height="200dp"/>
+             <com.knight.kotlin.library_widget.weatherview.ScrollBarChartView
+                 android:id="@+id/scrbar_chart_view"
+                 android:layout_width="0dp"
+                 android:layout_height="390dp"
+                 android:layout_marginTop="20dp"
+                 app:layout_constraintTop_toBottomOf="@id/weather_view"
+                 app:layout_constraintRight_toRightOf="parent"
+                 app:layout_constraintLeft_toLeftOf="parent"/>
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
