--- a/module_home/src/main/res/layouts/activitys/layout/home_layout_recommend_menu.xml
+++ b/module_home/src/main/res/layouts/activitys/layout/home_layout_recommend_menu.xml
@@ -19,7 +19,7 @@
     </data>
 
 
-    <androidx.core.widget.NestedScrollView
+    <com.knight.kotlin.library_widget.IncepterVerticalNestScrollView
         android:id="@+id/home_recommend_menu"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -308,11 +308,15 @@
              <com.knight.kotlin.library_widget.weatherview.ScrollBarChartView
                  android:id="@+id/scrbar_chart_view"
                  android:layout_width="0dp"
-                 android:layout_height="390dp"
+                 android:layout_height="400dp"
                  android:layout_marginTop="20dp"
                  app:layout_constraintTop_toBottomOf="@id/weather_view"
                  app:layout_constraintRight_toRightOf="parent"
-                 app:layout_constraintLeft_toLeftOf="parent"/>
+                 app:layout_constraintLeft_toLeftOf="parent"
+                 android:background="@drawable/home_weather_corners_bg"
+                 android:layout_marginLeft="10dp"
+                 android:layout_marginRight="10dp"
+                 />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -325,7 +329,7 @@
 <!--        </RelativeLayout>-->
 
 
-    </androidx.core.widget.NestedScrollView>
+    </com.knight.kotlin.library_widget.IncepterVerticalNestScrollView>
 
 
 </layout>
