--- a/module_home/src/main/res/layouts/activitys/layout/home_layout_recommend_menu.xml
+++ b/module_home/src/main/res/layouts/activitys/layout/home_layout_recommend_menu.xml
@@ -319,6 +319,16 @@
                  />
 
 
+             <androidx.recyclerview.widget.RecyclerView
+                 android:id="@+id/rv_weather_index"
+                 android:layout_width="0dp"
+                 android:layout_height="wrap_content"
+                 app:layout_constraintTop_toBottomOf="@id/scrbar_chart_view"
+                 android:layout_marginTop="10dp"
+                 app:layout_constraintRight_toRightOf="parent"
+                 app:layout_constraintLeft_toLeftOf="parent"/>
+
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
