--- a/module_realtime/src/main/res/layouts/activitys/layout/realtime_main_activity.xml
+++ b/module_realtime/src/main/res/layouts/activitys/layout/realtime_main_activity.xml
@@ -34,10 +34,36 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
+            <ImageView
+                android:id="@+id/iv_realtime_home_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/base_iv_white_left_arrow"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginLeft="@dimen/realtime_home_iv_back_margin_left"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+
+
+
+            <TextView
+                android:id="@+id/tv_realtime_home_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/realtime_home_title"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/realtime_home_title_text_size"
+                android:textStyle="bold"/>
+
 
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/img_search"
+                android:id="@+id/img_more"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
