--- a/module_realtime/src/main/res/layouts/adapters/layout/realtime_hot_item.xml
+++ b/module_realtime/src/main/res/layouts/adapters/layout/realtime_hot_item.xml
@@ -10,18 +10,31 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="90dp">
-
+        android:layout_height="@dimen/realtime_ct_item_height">
 
 
         <TextView
+            android:id="@+id/tv_real_time_rank"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="@drawable/base_baidu_real_time_top"
+            android:layout_marginLeft="@dimen/realtime_tv_rank_margin_left"/>
+
+
+        <TextView
+            android:id="@+id/tv_real_time_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="测试sdsds"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            android:textColor="@color/realtime_tv_title_color"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/tv_real_time_rank"
+            android:layout_marginLeft="@dimen/realtime_tv_title_margin_left"/>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
