--- a/module_realtime/src/main/res/layouts/adapters/layout/realtime_hot_item.xml
+++ b/module_realtime/src/main/res/layouts/adapters/layout/realtime_hot_item.xml
@@ -29,6 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="测试sdsds"
+            android:textSize="@dimen/realtime_tv_title_text_size"
             android:textColor="@color/realtime_tv_title_color"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
